--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "logfmt": "~1.1.2",
     "express": "~4.6.1",
-    "redis": "~0.11.0"
+    "redis": "~0.11.0",
+    "body-parser": "~1.5.0"
   }
 }
