--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "logfmt": "~1.1.2",
     "express": "~4.6.1",
     "redis": "~0.11.0",
-    "body-parser": "~1.5.0"
+    "body-parser": "~1.5.0",
+    "url": "~0.10.1"
   }
 }
